--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>INFO2180 Lab 2</h1>
   <p>This is a webpage for Lab 2 of INFO2180</p>
-  
+  <img src="doggy.jpeg" alt="Pug">
 </body>
 </html>
